fixed alignments (hate OCD)

--- a/pageRegister/pageRegisterCSS.css
+++ b/pageRegister/pageRegisterCSS.css
@@ -1,39 +1,37 @@
-/* Define your custom font */
+
 @font-face {
     font-family: 'SpongeBob';
     src: url('font/Krabby Patty.ttf') format('truetype');
 }
 
-/* Apply the custom font */
+
 body {
     font-family: 'SpongeBob', sans-serif;
+    margin: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-.navbar-brand img { 
-    margin-left: 40px;
+html, body {
+    height: 100%;
 }
 
-.krusty-logo {
-    margin-left: 50px;
-    width: 160px;
-    height: auto;
-}
 
 .navbar {
     background-color: #FFCC33;
     padding: 0;
-    margin: 0;
 }
 
-.navbar .navbar-brand,
+.navbar-brand img { 
+    margin-left: 40px;
+    width: 160px;
+    height: auto;
+}
+
 .navbar-nav {
     display: flex;
     align-items: center;
-}
-
-.navbar-nav {
-    display: flex;
-    align-items:center;
     margin-left: 160px;
 }
 
@@ -45,8 +43,6 @@ body {
     color: #000000;
     padding: 14px 16px;
     text-decoration: none;
-    text-align: center;
-    font-family: 'SpongeBob', sans-serif;
     font-size: 18px;
     border-radius: 40px;
 }
@@ -56,13 +52,14 @@ body {
     color: white;
 }
 
+
 .header-top-1 {
     display: flex;
     justify-content: space-between;
     padding: 10px 20px;
     background-color: #FFCC33;
-    font-family: 'SpongeBob', sans-serif;
 }
+
 
 .footer {
     background-color: #FF5733;
@@ -72,39 +69,40 @@ body {
     color: white;
     padding: 20px;
     text-align: center;
-    margin-top: 40px;
     height: 60px;
     z-index: 1000;
-    font-family: 'SpongeBob', sans-serif;
 }
 
 .main-content {
     display: flex;
+    justify-content: center;
     align-items: center;
-    text-align: center;
-    flex-direction: column;
     height: 100%;
-    flex: 1;
-}
-
-html, body {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-}
-
-#background {
-    background-color: #373B44;
-    background: linear-gradient(to right,#373B44,#4286f4);
+    background: linear-gradient(to right, #373B44, #4286f4);
 }
 
 .card {
-    background: linear-gradient(
-    to bottom,
-    #A1C935,
-    #F8C146,
-    #F39C12,
-    #D35400);
-    border-radius: 10px;
+    padding: 2rem;
+    background: linear-gradient(to bottom, #A1C935, #F8C146, #F39C12, #D35400);
+
+}
+
+label {
+    white-space: nowrap;
+    text-align: right;
+}
+
+.row .col-sm-3 {
+    text-align: right;
+}
+
+.form-control {
+    width: 100%; 
+    margin: 0;
+}
+
+button {
+    width: 100%;
+    font-size: 16px;
+    border-radius: 5px;
 }
